--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
-h1 {
-    color: red;
+#pattern-image{
+    height: 175px;
+    background-image: url(../img/pattern.png);
+    background-repeat: repeat-x;
+    background-color: #4EA0FF;
+}
+
+#logo{
+    height: 50px;
+    margin-top: 125px;
 }
